TAG: qcreports_db-4-4-0-2
DATE: 09/07/2010
STAFF: lec
CHANGES:
1) qcr.html - mcv changes

TAG: qcreports_db-4-4-0-1
DATE: 08/18/2010
STAFF: lec
CHANGES:
1) TR6839/merge tr6829 to trunk

TAG: qcreports_db-4-3-4-14
DATE: 08/18/2010
STAFF: lec
CHANGES: TR10318/goStats.sh

TAG: qcreports_db-4-3-4-13
DATE: 07/29/2010
STAFF: lec
CHANGES: TR10281
1) BIB_RefsToIndex.py
2) BIB_NoRef.sql
add pubmed ids

TAG: qcreports_db-4-3-4-12
DATE: 07/29/2010
STAFF: lec
CHANGES: TR10158
1) item 5: ALL_NoMCL.sql
2) item 7: ALL_MCLAllele.sql

TAG: qcreports_db-4-3-4-11
DATE: 07/28/2010
STAFF: lec
CHANGES: TR10136
1) fix qcweekly_reports.sh

TAG: qcreports_db-4-3-4-10
DATE: 07/27/2010
STAFF: lec
CHANGES: TR10136
1) fix weekly/PRB_StrainJAX2.py

TAG: qcreports_db-4-3-4-9
TAG: qcreports_db-4-3-4-8
DATE: 07/22/2010
STAFF: lec
CHANGES: TR10136
1) fix mgd/PRB_StrainJAX3.py
2) fix weekly/PRB_StrainJAX2.py
3) fix weekly/PRB_StrainJAX7.sql
4) fix weekly/PRB_StrainJAX8.sql
select all MMRRC ids, not just MMNC

TAG: qcreports_db-4-3-4-7
DATE: 07/21/2010
STAFF: lec
CHANGES:
1) TR9316/genmapload
2) alomrkload
3) gocfpload

TAG: qcreports_db-tr6839-5
DATE: 07/28/2010
STAFF: lec
CHANGES:
1) MGI_ComprehensiveMarkerSequence.py
   add Marker Features (MRK_MCV_Cache)

TAG: qcreports_db-tr6839-4
DATE: 07/21/2010
STAFF: sc
CHANGES:
1) added another report name to qcr.html

TAG: qcreports_db-tr6839-3
DATE: 07/15/2010
STAFF: sc
CHANGES:
1) Added reports to the qcr.html

TAG: qcreports_db-tr6839-2
DATE: 07/15/2010
STAFF: sc 
CHANGES:
1) MRK_McvAnnotByFeature.py
2) MRK_GeneNoMcvAnnot.py

TAG: qcreports_db-tr6839-1
DATE: 07/13/2010
STAFF: lec
CHANGES:
1) GXD_NonGeneMarkers.py

TAG: qcreports_db-tr6839-BP
DATE: 07/13/2010
STAFF: lec
CHANGES:
1) branch point tag for TR6839

TAG: qcreports_db-4-3-4-6
DATE: 07/08/2010
STAFF: lec
CHANGES:
1) TR9316/genmapload

TAG: qcreports_db-4-3-4-5
DATE: 07/01/2010
STAFF: lec
CHANGES:
1) TR10208/MRK_GmNoGeneModel.sql
2) TR10228/ALL_TransgeneDiff.sql
3) TR10268/GXD_SpecNoImage.sql